--- a/openpilote/requirements.txt
+++ b/openpilote/requirements.txt
@@ -1,11 +1,11 @@
-absl-py==0.9.0
+absl-py==0.10
 aenum==2.2.3
 aiodns==1.2.0
-aiohttp==3.5.4
+aiohttp==3.8.1
 appdirs==1.4.3
 astor==0.8.1
 astroid==2.3.3
-async-timeout==3.0.1
+async-timeout==4.0.0
 atomicwrites==1.3.0
 atpublic==1.0
 attrs==18.2.0
@@ -14,7 +14,7 @@ beautifulsoup4==4.7.1
 botocore==1.15.26
 bs4==0.0.1
 cachetools==4.0.0
-carla==0.9.5
+carla==0.9.13
 certifi==2019.11.28
 cffi==1.14.0
 chardet==3.0.4
@@ -31,11 +31,11 @@ filelock==3.0.12
 futures==3.1.1
 gast==0.3.3
 gevent==1.4.0
-google-auth==1.17.2
+google-auth==1.11.2
 google-auth-oauthlib==0.4.1
-google-pasta==0.1.8
+google-pasta==0.2
 greenlet==0.4.15
-grpcio==1.27.2
+grpcio==1.34.0
 h5py==2.10.0
 html5lib==1.0.1
 idna==2.8
@@ -47,9 +47,9 @@ isort==4.3.21
 Jinja2==2.11.1
 jmespath==0.9.5
 json-rpc==1.13.0
-Keras==2.3.1
+Keras==2.8.0
 Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.1
+Keras-Preprocessing==1.1.2
 kiwisolver==1.1.0
 lazy-object-proxy==1.4.3
 libarchive==0.4.7
@@ -60,18 +60,18 @@ lru-dict==1.1.6
 Markdown==3.2.1
 MarkupSafe==1.1.1
 matplotlib==3.2.1
-maxminddb==2.2.0
+maxminddb==1.4.1
 mccabe==0.6.1
 mechanize==0.4.3
 mpmath==1.1.0
 multidict==4.5.2
 Naked==0.1.31
 networkx==2.4
-numpy==1.18.1
+numpy==1.17.5
 oauthlib==3.1.0
 opencv-python==4.2.0.32
-opt-einsum==3.1.0
-pandas==1.1.0
+opt-einsum==3.3.0
+pandas==1.0.1
 Pillow==7.1.0
 pipenv==2018.11.26
 protobuf==3.11.3
@@ -95,7 +95,7 @@ pytz==2019.3
 PyYAML==5.3
 pyzmq==19.0.0
 raven==6.10.0
-requests==2.23.0
+requests==2.21.0
 requests-oauthlib==1.3.0
 rsa==3.4.2
 s3transfer==0.3.3
@@ -111,10 +111,10 @@ soupsieve==1.7.3
 streamlink==1.0.0
 sympy==1.5.1
 tenacity==6.1.0
-tensorboard==2.3.0
+tensorboard==2.8.0
 tensorflow-estimator==2.3.0
 tensorflow-gpu==2.3.1
-tensorflow
+tensorflow==2.3.1
 termcolor==1.1.0
 tqdm==4.43.0
 typed-ast==1.4.1
@@ -127,17 +127,17 @@ websocket==0.2.1
 websocket-client==0.55.0
 websockets==8.1
 Werkzeug==1.0.0
-wrapt==1.11.2
+wrapt==1.11.1
 yarl==1.3.0
 zipp==3.1.0
-absl-py==0.9.0
+absl-py==0.10
 aenum==2.2.3
 aiodns==1.2.0
-aiohttp==3.5.4
+aiohttp==3.8.1
 appdirs==1.4.3
 astor==0.8.1
 astroid==2.3.3
-async-timeout==3.0.1
+async-timeout==4.0.0
 atomicwrites==1.3.0
 atpublic==1.0
 attrs==18.2.0
@@ -162,11 +162,11 @@ filelock==3.0.12
 futures==3.1.1
 gast==0.3.3
 gevent==1.4.0
-google-auth==1.17.2
+google-auth==1.11.2
 google-auth-oauthlib==0.4.1
-google-pasta==0.1.8
+google-pasta==0.2
 greenlet==0.4.15
-grpcio==1.27.2
+grpcio==1.34.0
 h5py==2.10.0
 html5lib==1.0.1
 idna==2.8
@@ -178,9 +178,9 @@ isort==4.3.21
 Jinja2==2.11.1
 jmespath==0.9.5
 json-rpc==1.13.0
-Keras==2.3.1
+Keras==2.8.0
 Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.1
+Keras-Preprocessing==1.1.2
 kiwisolver==1.1.0
 lazy-object-proxy==1.4.3
 libarchive==0.4.7
@@ -191,18 +191,18 @@ lru-dict==1.1.6
 Markdown==3.2.1
 MarkupSafe==1.1.1
 matplotlib==3.2.1
-maxminddb==2.2.0
+maxminddb==1.4.1
 mccabe==0.6.1
 mechanize==0.4.3
 mpmath==1.1.0
 multidict==4.5.2
 Naked==0.1.31
 networkx==2.4
-numpy==1.18.1
+numpy==1.17.5
 oauthlib==3.1.0
 opencv-python==4.2.0.32
-opt-einsum==3.1.0
-pandas==1.1.0
+opt-einsum==3.3.0
+pandas==1.0.1
 Pillow==7.1.0
 pipenv==2018.11.26
 protobuf==3.11.3
@@ -226,7 +226,7 @@ pytz==2019.3
 PyYAML==5.3
 pyzmq==19.0.0
 raven==6.10.0
-requests==2.23.0
+requests==2.21.0
 requests-oauthlib==1.3.0
 rsa==3.4.2
 s3transfer==0.3.3
@@ -242,7 +242,7 @@ soupsieve==1.7.3
 streamlink==1.0.0
 sympy==1.5.1
 tenacity==6.1.0
-tensorboard==2.3.0
+tensorboard==2.8.0
 tensorflow-estimator==2.3.0
 tensorflow-gpu==2.3.1
 termcolor==1.1.0
@@ -257,17 +257,17 @@ websocket==0.2.1
 websocket-client==0.55.0
 websockets==8.1
 Werkzeug==1.0.0
-wrapt==1.11.2
+wrapt==1.11.1
 yarl==1.3.0
 zipp==3.1.0
-absl-py==0.9.0
+absl-py==0.10
 aenum==2.2.3
 aiodns==1.2.0
-aiohttp==3.5.4
+aiohttp==3.8.1
 appdirs==1.4.3
 astor==0.8.1
 astroid==2.3.3
-async-timeout==3.0.1
+async-timeout==4.0.0
 atomicwrites==1.3.0
 atpublic==1.0
 attrs==18.2.0
@@ -276,7 +276,7 @@ beautifulsoup4==4.7.1
 botocore==1.15.26
 bs4==0.0.1
 cachetools==4.0.0
-carla==0.9.5
+carla==0.9.13
 certifi==2019.11.28
 cffi==1.14.0
 chardet==3.0.4
@@ -293,11 +293,11 @@ filelock==3.0.12
 futures==3.1.1
 gast==0.3.3
 gevent==1.4.0
-google-auth==1.17.2
+google-auth==1.11.2
 google-auth-oauthlib==0.4.1
-google-pasta==0.1.8
+google-pasta==0.2
 greenlet==0.4.15
-grpcio==1.27.2
+grpcio==1.34.0
 h5py==2.10.0
 html5lib==1.0.1
 idna==2.8
@@ -309,9 +309,9 @@ isort==4.3.21
 Jinja2==2.11.1
 jmespath==0.9.5
 json-rpc==1.13.0
-Keras==2.3.1
+Keras==2.8.0
 Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.1
+Keras-Preprocessing==1.1.2
 kiwisolver==1.1.0
 lazy-object-proxy==1.4.3
 libarchive==0.4.7
@@ -322,18 +322,18 @@ lru-dict==1.1.6
 Markdown==3.2.1
 MarkupSafe==1.1.1
 matplotlib==3.2.1
-maxminddb==2.2.0
+maxminddb==1.4.1
 mccabe==0.6.1
 mechanize==0.4.3
 mpmath==1.1.0
 multidict==4.5.2
 Naked==0.1.31
 networkx==2.4
-numpy==1.18.1
+numpy==1.17.5
 oauthlib==3.1.0
 opencv-python==4.2.0.32
-opt-einsum==3.1.0
-pandas==1.1.0
+opt-einsum==3.3.0
+pandas==1.0.1
 Pillow==7.1.0
 pipenv==2018.11.26
 protobuf==3.11.3
@@ -357,7 +357,7 @@ pytz==2019.3
 PyYAML==5.3
 pyzmq==19.0.0
 raven==6.10.0
-requests==2.23.0
+requests==2.21.0
 requests-oauthlib==1.3.0
 rsa==3.4.2
 s3transfer==0.3.3
@@ -373,7 +373,7 @@ soupsieve==1.7.3
 streamlink==1.0.0
 sympy==1.5.1
 tenacity==6.1.0
-tensorboard==2.3.0
+tensorboard==2.8.0
 tensorflow-estimator==2.3.0
 tensorflow-gpu==2.3.1
 termcolor==1.1.0
@@ -388,7 +388,6 @@ websocket==0.2.1
 websocket-client==0.55.0
 websockets==8.1
 Werkzeug==1.0.0
-wrapt==1.11.2
+wrapt==1.11.1
 yarl==1.3.0
 zipp==3.1.0
-
